--- a/DataAdapter/Test/Test.csproj
+++ b/DataAdapter/Test/Test.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BModle.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="PrgramMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test.cs" />
   </ItemGroup>
